<resources>
    <string name="app_name">FitZone(Admin)</string>
    <!-- Splash Screen -->
    <string name="Title">FIT ZONE</string>

    <!-- Login admin Screen -->
    <string name="sing_in_title">Sing in</string>
    <string name="start">Let\'s start your Work by login</string>
    <string name="hello_admin">Hello Admin</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="sing_in">Sing In</string>

    <!-- Admin member list Screen -->
    <string name="add_members">Add Member</string>
    <!-- members list -->
    <string name="user_name">User Name</string>
    <string name="email.com">xyz@email.com</string>

    <!-- menu list name -->
    <string name="Dash_bord_title">Dash Bord</string>
    <string name="Members_title">Members</string>
    <string name="Members_List">Members List</string>
    <string name="Membership_list">Membership List</string>
    <string name="Trainers_title">Trainers Title</string>
    <string name="Trainers">Trainers</string>
    <string name="Booking_details">Booking Details</string>
    <string name="Workout_Exercises_title">Workout &amp; Exercises</string>
    <string name="Workout_plans">Workout Plans</string>
    <string name="Exercises">Exercises</string>
    <string name="Diet_Plans_title">Diet Plans</string>
    <string name="Packages_payments_title">Packages &amp; Payments</string>
    <string name="Packages">Packages</string>
    <string name="Payments">Payments</string>
    <!-- header file-->
    <string name="person_name">Person Name</string>

    <!-- main activity title -->
    <string name="Fit_Zone_title">Fit Zone</string>

    <!-- Member Profile -->
    <!-- Member Profile top -->
    <string name="Member_Name">Member Name</string>
    <string name="Active">Active</string>
    <string name="Not_Active">Not Active</string>

    <!-- Member Profile information -->
    <string name="member_profile">Member Profile</string>
    <string name="Email">Email</string>
    <string name="Mobile">Mobile</string>
    <string name="Gender">Gender</string>
    <string name="Age">Age</string>
    <string name="Address">Address</string>
    <string name="Activity_level">Activity level</string>
    <string name="Joining_Date">Joining Date</string>

    <!-- Member Profile button -->
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>

    <!-- Add Member -->
    <string name="add_member">Update Member</string>
    <string name="Member_Information">Member Information</string>
    <string name="Name">Name</string>
    <string name="Member_Data">Member Data</string>
    <string name="Goal">Goal</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="Submit">Submit</string>

    <!-- members home -->
    <string name="Member_List">Member List</string>


    <!-- Trainer home -->
    <string name="pending_trainer">Pending Trainer</string>
    <string name="approved_trainer">Approved Trainer</string>
    <string name="rejected_trainer">Rejected Trainer</string>
    <string name="trainer_booking">Trainer Booking</string>
    <string name="rating_review">Rating &amp; Review</string>

    <!-- Member Data Profile -->
    <string name="member_data_profile">Member Data Profile</string>
    <string name="current">Current</string>
    <string name="heaviest">Heaviest</string>
    <string name="lightest">Lightest</string>
    <string name="bmi">BMI</string>

    <!-- trainer pendding profile -->
    <string name="bio">BIO</string>
    <string name="registration_date">Registration Date</string>
    <string name="documents">Documents</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="change">Change</string>

    <!-- Document -->
    <string name="aadhaar_card">Aadhaar card</string>
    <string name="certificates">Certificates</string>
    <!--Aadhaar card-->
    <string name="front_side">Aadhaar Card Front Side</string>
    <string name="back_side">Aadhaar Card Back Side</string>
    <string name="description">Description</string>

    <!-- add trainer -->
    <string name="add_trainer">Update Trainer</string>
    <string name="trainer_information">Trainer Information</string>
    <string name="specialist">Specialist</string>

    <!--Rating List-->
    <string name="rating_list">Trainer Rating List</string>

    <!--trainer booking list-->
    <string name="booking_list">Trainer Booking List</string>

    <!--Booking  details-->
    <string name="booking_details">Booking  details</string>
    <string name="booking_id">Booking ID</string>
    <string name="trainer_name">Trainer Name</string>
    <string name="member_name">Member Name </string>
    <string name="booking_time">Booking time</string>
    <string name="status">Status</string>
    <string name="payments_details">Payments Details </string>
    <string name="payment_id">Payment ID</string>
    <string name="amount">Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_date">Payment Date</string>
    <string name="see_all_details">See all details</string>
    <string name="cancel_request">Cancel request</string>

    <!--Workout plans-->
    <string name="workout_plans">Workout plans</string>
    <string name="exercises_list">Exercises list</string>
    <string name="created">Created</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="created_date">Created Date</string>
    <string name="edit">Edit</string>

    <!--workout plans list-->
    <string name="workout_plans_list">Workout Plans List</string>

    <!--edit workout-->
    <string name="edit_workout">Edit Workout</string>
    <string name="add_exercise">Add Exercise</string>

    <!--Add Exercise-->
    <string name="body_part">Body Part</string>
    <string name="equipment">Equipment</string>

    <!--Update Exercises -->
    <string name="update_exercise">Update Exercises </string>

    <!--Diet list-->
    <string name="add_diet">Add Diet</string>

    <!--Diet-->
    <string name="diet">Diet</string>

    <!--Update diet-->
    <string name="update_diet">Update Diet</string>

    <!--packages_list-->
    <string name="packages_list">Packages List</string>

    <!--Add Packages-->
    <string name="add_packages">Add Packages</string>
    <string name="package_name">Package Name</string>
    <string name="price">Price</string>
    <string name="duration">Duration</string>

    <!--Update Package -->
    <string name="update_package">Update Package </string>

    <!--Purchases -->
    <string name="purchases">Purchases </string>

    <!--Purchase  details-->
    <string name="purchase_details">Purchase  details</string>
    <string name="package_duration">Package duration</string>
    <string name="package_status">Package Status</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="purchase_date">Purchase date</string>
    <string name="expiration_date">Expiration date</string>
    <string name="purchases_list">Purchases List</string>

    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="dark_mode">Dark mode</string>
    <string name="logout">Logout</string>
    <string name="notification">Notification </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>