<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    android:layout_gravity="center"
    tools:context=".AdminLogin">
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/img_sing_in_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="120dp"
            android:background="@drawable/logo_round_edge"
            tools:ignore="ContentDescription,ObsoleteLayoutParam" />
        <TextView
            android:id="@+id/tv_sing_in_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_sing_in_logo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/opensans_extrabold"
            android:gravity="center"
            android:text="@string/sing_in_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="380dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="MissingConstraints" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="320dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/back_ground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck">

        <LinearLayout
            android:layout_marginVertical="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="TextSizeCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_admin"
                    android:textColor="@color/black"
                    android:textSize="30dp"
                    android:paddingStart="20dp"
                    android:fontFamily="@font/opensans_extrabold"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,RtlSymmetry,SpUsage,TextSizeCheck" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:fontFamily="@font/nunito_medium"
                    android:textColor="@color/text"
                    android:textSize="15dp"
                    android:paddingStart="20dp"
                    android:textStyle="normal|bold"
                    tools:ignore="HardcodedText,RtlSymmetry,SpUsage,TextContrastCheck,TextSizeCheck" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:boxBackgroundColor="@color/edit_text_background"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="3dp"
                    app:hintTextColor="@color/hint_color"
                    app:shapeAppearanceOverlay="@style/Button4"
                    tools:ignore="HardcodedText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:paddingStart="15dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                     />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/password"
                    app:boxBackgroundColor="@color/edit_text_background"
                    app:boxStrokeColor="@color/hint_color"
                    app:boxStrokeWidth="3dp"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="#4E4A4A"
                    app:shapeAppearanceOverlay="@style/Button4"
                    tools:ignore="HardcodedText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:paddingStart="15dp"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/id_forgot_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/forgot_pass"
                    android:fontFamily="@font/nunito_medium"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:textSize="15sp"
                    android:textStyle="normal|bold"
                    tools:ignore="HardcodedText,TextContrastCheck,TextSizeCheck" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_singIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_background"
                android:elevation="@dimen/button_elevation"
                android:fontFamily="@font/nunito_medium"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:text="@string/sing_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"
                android:textStyle="normal|bold"
                app:cardElevation="@dimen/button_card_elevation"
                tools:ignore="HardcodedText,TouchTargetSizeCheck" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>